@@ -1,5 +1,13 @@
 2008-04-07  Johannes Schmid  <jhs@gnome.org>
 
+	* plugins/symbol-db/symbol-db-engine.c (sdb_engine_cache_lookup),
+	(sdb_engine_add_new_sym_kind), (sdb_engine_add_new_sym_access),
+	(sdb_engine_add_new_sym_implementation):
+	
+	Fixed some issues with caching
+
+2008-04-07  Johannes Schmid  <jhs@gnome.org>
+
 	* plugins/symbol-db/plugin.c (on_single_file_scan_end),
 	(on_importing_project_end), (project_root_added),
 	(symbol_db_activate), (symbol_db_deactivate):
